# Volume-mixer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  res.qrc
QT design/VolMixer/: CMakeLists.txt
conan/: conanfile.py  gcc-9  msvc-profile  profile
include/: MainWindow.h
src/: MainWindow.cpp  MainWindow.ui
